fix: remove white gap under footer

--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -1,4 +1,5 @@
 .footer {
+    margin-bottom: -100%;
     padding: 8rem 0;
 }
 
